Se agregaron las imagenes y se termino la maquetacion para empezar el diseno

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,3 +5,203 @@ head
 	title Blog Platzi
 	link(rel="stylesheet", href="css/estilos.css")
 body
+	header.cabezera
+		nav.menu
+			figure.logo
+				img(src="img/platzi-logo.png", alt="imagen")
+			ul.navegacion
+				li
+					a(href="#") Cursos
+				li
+					a(href="#") Blog
+				li
+					a(href="#") FAQ
+				li
+					a(href="#") Horarios
+				li
+					a(href="#") Live
+			a.boton-menu(href="#")
+	section.portada
+		.contenedor
+			form.buscador
+				input(type="text", name="", placeholder="Buscar ...")
+				input(type="submit", value="P")
+			.portada-inicio
+				.recomendacion
+					h1 Consejos que aumentarán tu efectividad al trabajar desde casa
+					hr
+					.izquierda
+						img(src="img/persona.png", alt="persona")
+						p.nombre Leticia Ferrer Mur
+					.derecha
+						p.fecha abril 15 2016
+	section.publicaciones
+		.contenedor
+			.divisiones
+				.division
+					.division-header
+						img(src="img/imagen-1.png", alt="imagen")
+					.division-body
+						h2 Cómo definir un Namespace en C#
+					.division-footer
+						.derecha
+							.nombre Juan Castro Lurita
+						.izquierda
+							p.fecha abril 13 2016
+				.division
+					.division-header
+						img(src="img/imagen-2.png", alt="imagen")
+					.division-body
+						h2 Todo lo que Facebook anunció en F8
+					.division-footer
+						.derecha
+							.nombre winiberto
+						.izquierda
+							p.fecha abril 12 2016
+				.division
+					.division-header
+						img(src="img/imagen-3.png", alt="imagen")
+					.division-body
+						h2 Lo nuevo en Android Studio 2.0
+					.division-footer
+						.derecha
+							.nombre Uriel Ramirez
+						.izquierda
+							p.fecha abril 12 2016
+				.division
+					.division-header
+						img(src="img/imagen-4.png", alt="imagen")
+					.division-body
+						h2 Lo que tienes que saber sobre React 15
+					.division-footer
+						.derecha
+							.nombre Leonidas Esteban
+						.izquierda
+							p.fecha abril 11 2016
+				.division
+					.division-header
+						img(src="img/imagen-5.png", alt="imagen")
+					.division-body
+						h2 Paso a paso: cómo trabajar con JSON en Go
+					.division-footer
+						.derecha
+							.nombre Juan Castro Lurita
+						.izquierda
+							p.fecha abril 8 2016
+				.division
+					.division-header
+						img(src="img/imagen-6.png", alt="imagen")
+					.division-body
+						h2 5 libros que deberías leer para aprender diseño de Producto
+					.division-footer
+						.derecha
+							.nombre Luis "Lulo" Lóperz Mendez
+						.izquierda
+							p.fecha abril 7 2016
+				.division
+					.division-header
+						img(src="img/imagen-7.png", alt="imagen")
+					.division-body
+						h2 Platzi Stream cambia de horario esta semana
+					.division-footer
+						.derecha
+							.nombre Anna Heim
+						.izquierda
+							p.fecha abril 5 2016
+				.division
+					.division-header
+						img(src="img/imagen-8.png", alt="imagen")
+					.division-body
+						h2 5 recomendaciones para proteger datos personales en tu negocio
+					.division-footer
+						.derecha
+							.nombre Germán Realpe Delgado
+						.izquierda
+							p.fecha marzo 28 2016
+				.division
+					.division-header
+						img(src="img/imagen-9.png", alt="imagen")
+					.division-body
+						h2 10 Gemas para desarrollar con Ruby on Rails
+					.division-footer
+						.derecha
+							.nombre Juan Castro Lurita
+						.izquierda
+							p.fecha marzo 17 2016
+				.division
+					.division-header
+						img(src="img/imagen-10.png", alt="imagen")
+					.division-body
+						h2 Lo que tienes que saber sobre Google Analytics 360 Suite
+					.division-footer
+						.derecha
+							.nombre Anna Heim
+						.izquierda
+							p.fecha marzo 16 2016
+				.division
+					.division-header
+						img(src="img/imagen-11.png", alt="imagen")
+					.division-body
+						h2 Primeras impresiones de Adobe Experience Design
+					.division-footer
+						.derecha
+							.nombre Jennifer López
+						.izquierda
+							p.fecha marzo 15 2016
+				.division
+					.division-header
+						img(src="img/imagen-12.png", alt="imagen")
+					.division-body
+						h2 El origen de Ruby on Rails, el framework orientado a la felicidad
+					.division-footer
+						.derecha
+							.nombre Yare Saavedra
+						.izquierda
+							p.fecha marzo 14 2016
+				.division
+					.division-header
+						img(src="img/imagen-13.png", alt="imagen")
+					.division-body
+						h2 Aprende a crear la inconografía perfecta
+					.division-footer
+						.derecha
+							.nombre Jennifer Lópes
+						.izquierda
+							p.fecha marzo 11 2016
+				.division
+					.division-header
+						img(src="img/imagen-14.png", alt="imagen")
+					.division-body
+						h2 Tips de marketing digital para músicos
+					.division-footer
+						.derecha
+							.nombre Armando Sarabia
+						.izquierda
+							p.fecha marzo 6 2016
+				.division
+					.division-header
+						img(src="img/imagen-16.png", alt="imagen")
+					.division-body
+						h2 Agrega 3D Touch y Force Touch a tus proyectos web
+					.division-footer
+						.derecha
+							.nombreUriel Ramirez
+						.izquierda
+							p.fecha marzo 3 2016
+			footer.footer
+				.contenedor
+					ul.paginacion
+						li Página 1 de 23
+						li
+							a(href="#") 1
+						li
+							a(href="#") 2
+						li
+							a(href="#") 3
+						li
+							a(href="#") 4
+						li
+							a(href="#") Siguiente
+						li
+							a(href="#") Última página
+
