--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,189 +3,223 @@ html(lang="es")
 head
 	meta(charset="UTF-8")
 	title Blog Platzi
+	<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded|Lato|Roboto" rel="stylesheet">
+	link(rel="stylesheet", href="font-awesome/css/font-awesome.min.css")
 	link(rel="stylesheet", href="css/estilos.css")
 body
 	header.cabezera
 		nav.menu
 			figure.logo
-				img(src="img/platzi-logo.png", alt="imagen")
+				img(src="img/platzi-logo.png", alt="imagen", width="86")
 			ul.navegacion
 				li
 					a(href="#") Cursos
 				li
-					a(href="#") Blog
+					a(href="#").active Blog
 				li
 					a(href="#") FAQ
 				li
 					a(href="#") Horarios
-				li
+				li.ultimo
 					a(href="#") Live
-			a.boton-menu(href="#")
+				a.boton-menu(href="#") Inicia sesión
 	section.portada
 		.contenedor
 			form.buscador
 				input(type="text", name="", placeholder="Buscar ...")
-				input(type="submit", value="P")
+				button(type="submit")
+					span.fa.fa-search
+
 			.portada-inicio
-				.recomendacion
+				a(href="#").recomendacion
 					h1 Consejos que aumentarán tu efectividad al trabajar desde casa
-					hr
-					.izquierda
-						img(src="img/persona.png", alt="persona")
-						p.nombre Leticia Ferrer Mur
-					.derecha
-						p.fecha abril 15 2016
+					.abajo
+						.izquierda
+							img(src="img/persona.png", alt="persona")
+							p.nombre Leticia Ferrer Mur
+						.derecha
+							p.fecha abril 15 2016
 	section.publicaciones
 		.contenedor
 			.divisiones
 				.division
 					.division-header
-						img(src="img/imagen-1.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-1.png", alt="imagen")
 					.division-body
-						h2 Cómo definir un Namespace en C#
+						h2
+							a(href="#") Cómo definir un Namespace en C#
 					.division-footer
 						.derecha
-							.nombre Juan Castro Lurita
+							p.nombre Juan Castro Lurita
 						.izquierda
 							p.fecha abril 13 2016
 				.division
 					.division-header
-						img(src="img/imagen-2.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-2.png", alt="imagen")
 					.division-body
-						h2 Todo lo que Facebook anunció en F8
+						h2
+							a(href="#") Todo lo que Facebook anunció en F8
 					.division-footer
 						.derecha
-							.nombre winiberto
+							p.nombre winiberto
 						.izquierda
 							p.fecha abril 12 2016
 				.division
 					.division-header
-						img(src="img/imagen-3.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-3.png", alt="imagen")
 					.division-body
-						h2 Lo nuevo en Android Studio 2.0
+						h2
+							a(href="#") Lo nuevo en Android Studio 2.0
 					.division-footer
 						.derecha
-							.nombre Uriel Ramirez
+							p.nombre Uriel Ramirez
 						.izquierda
 							p.fecha abril 12 2016
 				.division
 					.division-header
-						img(src="img/imagen-4.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-4.png", alt="imagen")
 					.division-body
-						h2 Lo que tienes que saber sobre React 15
+						h2
+							a(href="#") Lo que tienes que saber sobre React 15
 					.division-footer
 						.derecha
-							.nombre Leonidas Esteban
+							p.nombre Leonidas Esteban
 						.izquierda
 							p.fecha abril 11 2016
 				.division
 					.division-header
-						img(src="img/imagen-5.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-5.png", alt="imagen")
 					.division-body
-						h2 Paso a paso: cómo trabajar con JSON en Go
+						h2
+							a(href="#") Paso a paso: cómo trabajar con JSON en Go
 					.division-footer
 						.derecha
-							.nombre Juan Castro Lurita
+							p.nombre Juan Castro Lurita
 						.izquierda
 							p.fecha abril 8 2016
 				.division
 					.division-header
-						img(src="img/imagen-6.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-6.png", alt="imagen")
 					.division-body
-						h2 5 libros que deberías leer para aprender diseño de Producto
+						h2
+							a(href="#") 5 libros que deberías leer para aprender diseño de Producto
 					.division-footer
 						.derecha
-							.nombre Luis "Lulo" Lóperz Mendez
+							p.nombre Luis "Lulo" Lóperz Mendez
 						.izquierda
 							p.fecha abril 7 2016
 				.division
 					.division-header
-						img(src="img/imagen-7.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-7.png", alt="imagen")
 					.division-body
-						h2 Platzi Stream cambia de horario esta semana
+						h2
+							a(href="#") Platzi Stream cambia de horario esta semana
 					.division-footer
 						.derecha
-							.nombre Anna Heim
+							p.nombre Anna Heim
 						.izquierda
 							p.fecha abril 5 2016
 				.division
 					.division-header
-						img(src="img/imagen-8.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-8.png", alt="imagen")
 					.division-body
-						h2 5 recomendaciones para proteger datos personales en tu negocio
+						h2
+							a(href="#") 5 recomendaciones para proteger datos personales en tu negocio
 					.division-footer
 						.derecha
-							.nombre Germán Realpe Delgado
+							p.nombre Germán Realpe Delgado
 						.izquierda
 							p.fecha marzo 28 2016
 				.division
 					.division-header
-						img(src="img/imagen-9.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-9.png", alt="imagen")
 					.division-body
-						h2 10 Gemas para desarrollar con Ruby on Rails
+						h2
+							a(href="#") 10 Gemas para desarrollar con Ruby on Rails
 					.division-footer
 						.derecha
-							.nombre Juan Castro Lurita
+							p.nombre Juan Castro Lurita
 						.izquierda
 							p.fecha marzo 17 2016
 				.division
 					.division-header
-						img(src="img/imagen-10.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-10.png", alt="imagen")
 					.division-body
-						h2 Lo que tienes que saber sobre Google Analytics 360 Suite
+						h2
+							a(href="#") Lo que tienes que saber sobre Google Analytics 360 Suite
 					.division-footer
 						.derecha
-							.nombre Anna Heim
+							p.nombre Anna Heim
 						.izquierda
 							p.fecha marzo 16 2016
 				.division
 					.division-header
-						img(src="img/imagen-11.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-11.png", alt="imagen")
 					.division-body
-						h2 Primeras impresiones de Adobe Experience Design
+						h2
+							a(href="#") Primeras impresiones de Adobe Experience Design
 					.division-footer
 						.derecha
-							.nombre Jennifer López
+							p.nombre Jennifer López
 						.izquierda
 							p.fecha marzo 15 2016
 				.division
 					.division-header
-						img(src="img/imagen-12.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-12.png", alt="imagen")
 					.division-body
-						h2 El origen de Ruby on Rails, el framework orientado a la felicidad
+						h2
+							a(href="#") El origen de Ruby on Rails, el framework orientado a la felicidad
 					.division-footer
 						.derecha
-							.nombre Yare Saavedra
+							p.nombre Yare Saavedra
 						.izquierda
 							p.fecha marzo 14 2016
 				.division
 					.division-header
-						img(src="img/imagen-13.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-13.png", alt="imagen")
 					.division-body
-						h2 Aprende a crear la inconografía perfecta
+						h2
+							a(href="#") Aprende a crear la inconografía perfecta
 					.division-footer
 						.derecha
-							.nombre Jennifer Lópes
+							p.nombre Jennifer Lópes
 						.izquierda
 							p.fecha marzo 11 2016
 				.division
 					.division-header
-						img(src="img/imagen-14.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-14.png", alt="imagen")
 					.division-body
-						h2 Tips de marketing digital para músicos
+						h2
+							a(href="#") Tips de marketing digital para músicos
 					.division-footer
 						.derecha
-							.nombre Armando Sarabia
+							p.nombre Armando Sarabia
 						.izquierda
 							p.fecha marzo 6 2016
 				.division
 					.division-header
-						img(src="img/imagen-16.png", alt="imagen")
+						a(href="#")
+							img(src="img/imagen-16.png", alt="imagen")
 					.division-body
-						h2 Agrega 3D Touch y Force Touch a tus proyectos web
+						h2
+							a(href="#") Agrega 3D Touch y Force Touch a tus proyectos web
 					.division-footer
 						.derecha
-							.nombreUriel Ramirez
+							p.nombreUriel Ramirez
 						.izquierda
 							p.fecha marzo 3 2016
 			footer.footer
@@ -193,7 +227,7 @@ body
 					ul.paginacion
 						li Página 1 de 23
 						li
-							a(href="#") 1
+							a(href="#").active 1
 						li
 							a(href="#") 2
 						li
@@ -201,7 +235,7 @@ body
 						li
 							a(href="#") 4
 						li
-							a(href="#") Siguiente
+							a(href="#")!="Siguiente <span class='fa fa-angle-right'></span>"
 						li
-							a(href="#") Última página
+							a(href="#")!="Última página <span class='fa fa-angle-right'></span><span class='fa fa-angle-right'></span>"
 
